fixed about us page background color and fixed signup form overflow problem

--- a/src/Pages/Auth/HookForm/HookForm.css
+++ b/src/Pages/Auth/HookForm/HookForm.css
@@ -1,3 +1,7 @@
+.hook-form{
+    overflow-x: hidden;
+    min-height: 100vh;
+}
 .signin-form{
     margin:30px 150px;
 }
